--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "vanessa",
   "license": "MIT",
   "dependencies": {
+    "faker": "^4.1.0",
     "jest": "^23.6.0"
   },
   "directories": {
